--- a/Platformer/Platformer.vcxproj
+++ b/Platformer/Platformer.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="Player2.cpp" />
     <ClCompile Include="Player3.cpp" />
     <ClCompile Include="Player4.cpp" />
+    <ClCompile Include="PowerUp.cpp" />
     <ClCompile Include="Score.cpp" />
     <ClCompile Include="ShellBall.cpp" />
     <ClCompile Include="Image.cpp" />
@@ -207,6 +208,7 @@
     <ClInclude Include="Player2.h" />
     <ClInclude Include="Player3.h" />
     <ClInclude Include="Player4.h" />
+    <ClInclude Include="PowerUp.h" />
     <ClInclude Include="Score.h" />
     <ClInclude Include="ShellBall.h" />
     <ClInclude Include="Image.h" />
